# AI-Outreach-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
db/: chroma.sqlite3
documents/: candidate_profiles.json  job_ad_1.txt  linkedin_data.json
src/ai-outreach-crew/config/: agents.yaml  tasks.yaml
src/ai_outreach_crew/: crew.py  main.py  test.py
src/ai_outreach_crew/config/: agents.yaml  tasks.yaml
src/ai_outreach_crew/tools/: custom_tools.py  testanddel.py
utils/: constants.py
