[tool.poetry]
name = "ai-outreach-agent"
version = "0.1.0"
description = "This project aims to leverage large language models (LLMs) to automate the process of identifying potential candidates on LinkedIn and sending personalized invitation messages. The goal is to streamline the outreach process and increase the chances of successful connections and engagements."
authors = ["BennyDanielT <benny28dany@gmail.com>"]
license = "GNU LESSER GENERAL PUBLIC LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
